--- a/index.html
+++ b/index.html
@@ -1673,6 +1673,11 @@
             preloadAssets();
             updatePlayerInfo();
         });
+// Force-show the menu when the game loads
+window.addEventListener('load', () => {
+    mainMenu.style.display = 'flex'; // Show menu
+    gameScreen.style.display = 'none'; // Hide game
+});
     </script>
 </body>
 </html>
