--- a/index.html
+++ b/index.html
@@ -1656,25 +1656,21 @@
                 }
             });
             
-            // Set up audio (placeholder sources - replace with actual files)
-            backgroundMusic.src = 'https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3';
-            shootSound.src = 'https://www.soundjay.com/buttons/sounds/button-09.mp3';
-            explosionSound.src = 'https://www.soundjay.com/explosion-sounds/explosion-01.mp3';
-            powerUpSound.src = 'https://www.soundjay.com/buttons/sounds/button-10.mp3';
-            correctAnswerSound.src = 'https://www.soundjay.com/buttons/sounds/button-21.mp3';
-            wrongAnswerSound.src = 'https://www.soundjay.com/buttons/sounds/button-10.mp3';
-            
-            // Set initial volume
-            backgroundMusic.volume = gameState.musicVolume / 100;
-        }
+// Set up audio (corrected)
+backgroundMusic.src = 'https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3';
+shootSound.src = 'https://www.soundjay.com/buttons/sounds/button-09.mp3';
+explosionSound.src = 'https://www.soundjay.com/explosion-sounds/explosion-01.mp3';
+powerUpSound.src = 'https://www.soundjay.com/buttons/sounds/button-10.mp3';
+correctAnswerSound.src = 'https://www.soundjay.com/buttons/sounds/button-21.mp3';
+wrongAnswerSound.src = 'https://www.soundjay.com/buttons/sounds/button-10.mp3';
 
-        // Initialize the game when page loads
-        window.addEventListener('load', () => {
-            preloadAssets();
-            updatePlayerInfo();
-        });
-// Force-show the menu when the game loads
+// Set initial volume
+backgroundMusic.volume = gameState.musicVolume / 100;
+
+// Initialize the game when page loads
 window.addEventListener('load', () => {
+    preloadAssets();
+    updatePlayerInfo();
     mainMenu.style.display = 'flex'; // Show menu
     gameScreen.style.display = 'none'; // Hide game
 });
