--- a/index.html
+++ b/index.html
@@ -50,8 +50,12 @@
             transform: translateX(-50%);
             width: 90%;
             max-width: 700px;
-            z-index: 1;
-            pointer-events: none;
+            z-index: 3; /* Changed from 1 to 3 to appear above game */
+            background-color: rgba(0, 0, 0, 0.7);
+            padding: 20px;
+            border-radius: 10px;
+            border: 2px solid #FFD700;
+            display: none; /* Initially hidden *
         }
         
         .triviaOption {
