--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         #settingsButton { background: linear-gradient(145deg, #2196F3, #0D47A1); }
         
         #hud {
-            position: fixed;
+            position: absolute;
             top: 10px;
             left: 10px;
             font-size: 18px;
@@ -635,11 +635,12 @@
                 highScores = JSON.parse(savedScores);
             } else {
                 highScores = [
-                    { name: "Jose", score: 10000 },
-                    { name: "Maria", score: 8000 },
-                    { name: "Juan", score: 6000 },
-                    { name: "Ana", score: 4000 },
-                    { name: "Pedro", score: 2000 }
+                    { name: "Gerbie", score: 10000 },
+                    { name: "James", score: 9000 },
+                    { name: "Ericka", score: 8000 },
+                    { name: "Justin", score: 7000 },
+                    { name: "Jhaymie", score: 6000 },
+                    { name: "Edmel", score: 5000 }
                 ];
             }
         }
