--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pinoy Quiz Trivia Space Invader</title>
     <style>
+        @font-face {
+    font-family: 'Press Start 2P';
+    src: url('fonts/PressStart2P-Regular.woff2') format('woff2'),
+         url('fonts/PressStart2P-Regular.woff') format('woff'),
+         url('fonts/PressStart2P-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap; /* Prevents invisible text while loading */
+}
         body {
             margin: 0;
             padding: 0;
