--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
         
         // Sound effects - Using different audio sources
         const sounds = {
-            shoot: new Audio('https://github.com/GalaxyOfKnowledge/test5/blob/main/zapsplat_multimedia_game_sound_retro_arcade_style_zap_shoot_002_108849.mp3'),
+            shoot: new Audio('https://freesound.org/people/Leszek_Szary/sounds/146725/download/146725__leszek_szary__laser.wav'),
             enemyShoot: new Audio('https://assets.mixkit.co/sfx/preview/mixkit-arrow-whoosh-1491.mp3'),
             explosion: new Audio('https://assets.mixkit.co/sfx/preview/mixkit-explosion-impact-1684.mp3'),
             powerup: new Audio('https://assets.mixkit.co/sfx/preview/mixkit-achievement-bell-600.mp3'),
