--- a/index.html
+++ b/index.html
@@ -917,7 +917,7 @@
             levelUp: new Audio('https://assets.mixkit.co/sfx/preview/mixkit-unlock-game-notification-253.mp3'),
             hit: new Audio('https://assets.mixkit.co/sfx/preview/mixkit-arcade-retro-changing-tab-206.mp3'),
             menuSelect: new Audio('https://assets.mixkit.co/sfx/preview/mixkit-select-click-1109.mp3'),
-            menuHover: new Audio('https://assets.mixkit.co/sfx/preview/mixkit-hover-click-notification-235.mp3')
+            menuHover: new Audio('170143__timgormly__8-bit-blip.aiff')
         };
         
         // Set volume for all sounds
