--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galaxy Of Knowledger</title>
+    <title>Galaxy Of Knowledge</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
         
@@ -837,7 +837,7 @@
     </div>
     
     <div id="menuScreen">
-        <div class="title">PINOY QUIZ TRIVIA<br>SPACE INVADER</div>
+        <div class="title">GALAXY of<br>KNOWLEDGE</div>
         <button id="playButton" class="menu-button">PLAY</button>
         <button id="highscoreButton" class="menu-button">HIGHSCORE</button>
         <button id="settingsButton" class="menu-button">SETTINGS</button>
