--- a/index.html
+++ b/index.html
@@ -1340,19 +1340,19 @@
         
         // Sound effects - Using different audio sources
         const sounds = {
-            shoot: new Audio('https://assets.mixkit.co/sfx/preview/mixkit-short-laser-gun-shot-1670.mp3'),
-            enemyShoot: new Audio('https://assets.mixkit.co/sfx/preview/mixkit-arrow-whoosh-1491.mp3'),
-            explosion: new Audio('https://assets.mixkit.co/sfx/preview/mixkit-explosion-impact-1684.mp3'),
+            shoot: new Audio('mixkit-short-laser-gun-shot-1670 (1).wav'),
+            enemyShoot: new Audio('mixkit-arrow-whoosh-1491.wav'),
+            explosion: new Audio('mixkit-arcade-game-explosion-1699.wav'),
             powerup: new Audio('https://assets.mixkit.co/sfx/preview/mixkit-achievement-bell-600.mp3'),
             correct: new Audio('https://assets.mixkit.co/sfx/preview/mixkit-correct-answer-tone-2870.mp3'),
             wrong: new Audio('https://assets.mixkit.co/sfx/preview/mixkit-wrong-answer-fail-notification-946.mp3'),
-            bossSpawn: new Audio('https://assets.mixkit.co/sfx/preview/mixkit-monster-dinosaur-roar-1988.mp3'),
-            shipChange: new Audio('https://assets.mixkit.co/sfx/preview/mixkit-arcade-game-jump-coin-216.mp3'),
-            win: new Audio('https://assets.mixkit.co/sfx/preview/mixkit-winning-chimes-2015.mp3'),
+            bossSpawn: new Audio('mixkit-dinosaur-monster-roar-1976.wav'),
+            shipChange: new Audio('mixkit-arcade-retro-jump-223 (1).wav'),
+            win: new Audio('mixkit-winning-chimes-2015.wav'),
             combo: new Audio('https://assets.mixkit.co/sfx/preview/mixkit-extra-bonus-in-a-video-game-2045.mp3'),
-            waveComplete: new Audio('https://assets.mixkit.co/sfx/preview/mixkit-unlock-game-notification-253.mp3'),
+            waveComplete: new Audio('mixkit-arcade-bonus-alert-767.wav'),
             hit: new Audio('https://assets.mixkit.co/sfx/preview/mixkit-arcade-retro-changing-tab-206.mp3'),
-            menuSelect: new Audio('https://assets.mixkit.co/sfx/preview/mixkit-select-click-1109.mp3'),
+            menuSelect: new Audio('mixkit-gear-fast-lock-tap-2857.wav'),
             menuHover: new Audio('https://assets.mixkit.co/sfx/preview/mixkit-horror-ambience-228.mp3'),
             laser: new Audio('https://assets.mixkit.co/sfx/preview/mixkit-laser-weapon-shot-1671.mp3'),
             slowmo: new Audio('https://assets.mixkit.co/sfx/preview/mixkit-software-interface-start-2574.mp3'),
