--- a/index.html
+++ b/index.html
@@ -1340,7 +1340,7 @@
         
         // Sound effects - Using different audio sources
         const sounds = {
-            shoot: new Audio('mixkit-short-laser-gun-shot-1670 (1).wav'),
+            shoot: new Audio('mixkit-game-whip-shot-1512.wav'),
             enemyShoot: new Audio('mixkit-arrow-whoosh-1491.wav'),
             explosion: new Audio('mixkit-arcade-game-explosion-1699.wav'),
             powerup: new Audio('https://assets.mixkit.co/sfx/preview/mixkit-achievement-bell-600.mp3'),
