--- a/index.html
+++ b/index.html
@@ -1003,7 +1003,7 @@
     </div>
     
     <div id="menuScreen">
-        <div class="title">GALAXY OF KNOWLEDGE:<br>SPACE INVADER</div>
+        <div class="title">GALAXY OF KNOWLEDGE</div>
         <button id="playButton" class="menu-button">PLAY</button>
         <button id="highscoreButton" class="menu-button">HIGHSCORE</button>
         <button id="settingsButton" class="menu-button">SETTINGS</button>
