--- a/index.html
+++ b/index.html
@@ -2857,7 +2857,7 @@
                     ctx.shadowBlur = 15;
                     ctx.fill();
                     ctx.shadowBlur = 0;
-                }} else if (this.type === 'bangka') {
+                }} else if (this.type === 'bangka') }}
     // Mini bangka ship - enhanced design
     // Hull (boat shape)
     ctx.fillStyle = '#8B4513';
