--- a/index.html
+++ b/index.html
@@ -1359,128 +1359,103 @@
         // Trivia questions - More interesting questions without categories
         const triviaQuestions = [
             {
-                question: "WHAT IS THE ONLY MAMMAL CAPABLE OF TRUE FLIGHT?",
-                options: ["BAT", "FLYING SQUIRREL", "PENGUIN", "OSTRICH"],
-                answer: 0
+                question: "WHICH FILIPINO HERO WRONTE 'MI ULTIMO ADIOS' BEFORE HIS EXECUTION?",
+                options: ["MARCELO H. DEL PILAR", "GRACIANO LOPEZ JAENA", "JOSE RIZAL", "ANTONIO LUNA"],
+                answer: 2
             },
             {
-                question: "WHICH PLANET HAS THE MOST MOONS IN OUR SOLAR SYSTEM?",
-                options: ["EARTH", "MARS", "JUPITER", "SATURN"],
+                question: "WHICH ANCIENT SCRIPT WAS USED BY PRE-COLONIAL FILIPINOS",
+                options: ["SANSKRIT", "BAYBAYIN", "LIBRO", "SARIMANOK"
                 answer: 3
             },
             {
-                question: "WHAT IS THE LARGEST ORGAN IN THE HUMAN BODY?",
-                options: ["HEART", "LIVER", "SKIN", "BRAIN"],
-                answer: 2
-            },
-            {
-                question: "WHICH ELEMENT MAKES UP ABOUT 78% OF EARTH'S ATMOSPHERE?",
-                options: ["OXYGEN", "CARBON DIOXIDE", "NITROGEN", "HYDROGEN"],
-                answer: 2
-            },
-            {
-                question: "WHAT IS THE FASTEST LAND ANIMAL?",
-                options: ["LION", "CHEETAH", "GAZELLE", "OSTRICH"],
-                answer: 1
-            },
-            {
-                question: "WHICH COUNTRY INVENTED PAPER?",
-                options: ["EGYPT", "GREECE", "CHINA", "INDIA"],
-                answer: 2
-            },
-            {
-                question: "HOW MANY BONES ARE IN THE HUMAN BODY?",
-                options: ["106", "206", "306", "406"],
-                answer: 1
-            },
-            {
-                question: "WHAT IS THE ONLY FOOD THAT NEVER SPOILS?",
-                options: ["HONEY", "SALT", "SUGAR", "RICE"],
+                question: "WHO WAS THE FIRST FILIPINO SAINT?",
+                options: ["SAN LORENZO RUIZ", "SAN PEDRO CALUNGSOD", "SANTA TERESA DE AVILA", "SAN JUAN DE LA CRUZ"],
                 answer: 0
             },
             {
-                question: "WHICH ANIMAL CAN'T JUMP?",
-                options: ["KANGAROO", "FROG", "ELEPHANT", "RABBIT"],
-                answer: 2
-            },
-            {
-                question: "WHAT IS THE MOST COMMON ELEMENT IN THE UNIVERSE?",
-                options: ["OXYGEN", "CARBON", "HYDROGEN", "HELIUM"],
-                answer: 2
-            },
-            {
-                question: "WHICH PLANET IS KNOWN AS THE RED PLANET?",
-                options: ["VENUS", "MARS", "JUPITER", "SATURN"],
+                question: "WHICH FILIPINO FESTIVAL FEATURES COLORFUL ATI-ATIHAN DANCES?",
+                options: ["SINULOG", "DINAGYANG", "PAHIYAS", "PANAGBENGA"],
                 answer: 1
             },
             {
-                question: "WHAT IS THE ONLY BIRD THAT CAN FLY BACKWARDS?",
-                options: ["EAGLE", "HUMMINGBIRD", "PENGUIN", "OSTRICH"],
-                answer: 1
-            },
-            {
-                question: "WHAT IS THE ONLY CONTINENT WITHOUT BEES?",
-                options: ["AFRICA", "AUSTRALIA", "ANTARCTICA", "ASIA"],
-                answer: 2
-            },
-            {
-                question: "WHICH COUNTRY HAS THE MOST TIME ZONES?",
-                options: ["USA", "RUSSIA", "CHINA", "FRANCE"],
+                question: "WHAT IS THE TRADITIONAL FILIPINO MARTIAL ARTS?",
+                options: ["BOXING", "TAEKWONDO", "MUAY THAI", "ARNIS"],
                 answer: 3
             },
             {
-                question: "WHAT IS THE ONLY METAL THAT IS LIQUID AT ROOM TEMPERATURE?",
-                options: ["GOLD", "SILVER", "MERCURY", "COPPER"],
-                answer: 2
-            },
-            {
-                question: "WHICH ANIMAL HAS THE LONGEST LIFESPAN?",
-                options: ["ELEPHANT", "GALAPAGOS TORTOISE", "BOWHEAD WHALE", "GREENLAND SHARK"],
+                question: "WHAT IS THE TRADITIONAL FILIPINO COURTSHIP DANCE?",
+                options: ["TINIKLING", "PANDANGGO SA ILAW", "KUTSARA", "CARIÑOSA"],
                 answer: 3
             },
             {
-                question: "WHAT IS THE ONLY BONE IN THE HUMAN BODY NOT CONNECTED TO ANOTHER BONE?",
-                options: ["FEMUR", "HYOID", "SKULL", "PELVIS"],
-                answer: 1
-            },
-            {
-                question: "WHICH PLANET HAS THE MOST VOLCANOES?",
-                options: ["EARTH", "MARS", "VENUS", "JUPITER"],
+                question: "WHICH FILIPINO STREET FOOD IS MADE FROM FERTILIZED DUCK EGGS?",
+                options: ["KWEK-KWEK", "ISAW", "BALUT", "SINIGANG"],
                 answer: 2
             },
             {
-                question: "WHAT IS THE ONLY BIRD THAT CAN SWIM BUT CAN'T FLY?",
-                options: ["DUCK", "PENGUIN", "OSTRICH", "KIWI"],
+                question: "WHAT IS THE OLDEST CITY IN THE FILIPINES?",
+                options: ["MANILA", "CEBU", "CAVITE", "DAVAO"],
                 answer: 1
             },
             {
-                question: "WHICH COUNTRY HAS THE MOST ISLANDS?",
-                options: ["INDONESIA", "PHILIPPINES", "SWEDEN", "JAPAN"],
-                answer: 2
-            },
-            {
-                question: "WHAT IS THE ONLY FRUIT THAT HAS SEEDS ON THE OUTSIDE?",
-                options: ["STRAWBERRY", "PINEAPPLE", "WATERMELON", "BANANA"],
+                question: "WHICH VOLCANO IS KNOW FOR ITS PERFECT CONE SHAPE?",
+                options: ["MAYON", "TAAL", "PINATUBO", "KANLAON"],
                 answer: 0
             },
             {
-                question: "WHICH ANIMAL HAS THE STRONGEST BITE FORCE?",
-                options: ["LION", "CROCODILE", "GREAT WHITE SHARK", "HIPPOPOTAMUS"],
-                answer: 1
-            },
-            {
-                question: "WHAT IS THE ONLY METAL THAT IS EDIBLE?",
-                options: ["GOLD", "SILVER", "IRON", "ALUMINUM"],
+                question: "WHERE IS THE FAMOUS CHOCOLATE HILLS LOCATED?",
+                options: ["PINATUBO", "TAAL", "BAGIO!", "SAMAR"],
                 answer: 0
             },
             {
-                question: "WHICH PLANET HAS THE MOST POWERFUL WINDS IN THE SOLAR SYSTEM?",
-                options: ["EARTH", "MARS", "JUPITER", "NEPTUNE"],
-                answer: 3
+                question: "WHICH FILIPINO BOXER BECAME AN 8-DIVISION WORLD CHAMPION",
+                options: ["MANNY PAQUIAO", "FLOYD MAYWEATHER JR.", "MIKE TYSON", "VINZ AARON P. SIMBULAN"],
+                answer: 0
             },
             {
-                question: "WHAT IS THE ONLY MAMMAL THAT CAN'T JUMP?",
-                options: ["ELEPHANT", "RHINOCEROS", "HIPPOPOTAMUS", "ALL OF THE ABOVE"],
+                question: "WHAT IS THE MOST-WATCHED NOONTIME SHOW IN THE PHILIPPINES?",
+                options: ["EAT BULAGA!", "IT'S SHOWTIME", "WOWOWIN", "ASAP"],
+                answer: 0
+            },
+            {
+                question: "WHICH FILIPINO FRUIT IS KNOW AS THE 'STINKIEST FRUIT IN THE WORLD'?",
+                options: ["LANZONES", "RAMBUTAN", "DURIAN", "MANGO"],
+                answer: 2
+            },
+            {
+                question: "WHICH MYTHICAL CREATURE IS KNOW AS A HALF-HORES, HALF-HUMAN IN PHILIPPINE FOLKLORE?",
+                options: ["KAPRE", "MANANANGGAL", "TIKBALANG", "ASWANG"],
+                answer: 2
+            },
+            {
+                question: "WHAT IS THE TRADITIONAL FILIPINO DANCE WHERE DANCERS DODGE BETWEEN BAMBOO POLES?",
+                options: ["SINKIL", "ITIK-ITIK", "TINIKLING", "PANDANGGO SA ILAW"],
+                answer: 2
+            },
+            {
+                question: "WHAT IS THE CAPITAL OF THE PHILIPPINES?",
+                options: ["QUEZON CITY", "MANILA", "MAKATI", "TONDO"],
+                answer: 1
+            },
+            {
+                question: "WHO IS KNOW AS THE 'FATHER OF THE PHILIPPINE REVOLUTION'?",
+                options: ["AMILIO AGUINALDO", "ANDRES BONIFACIO", "APOLINARIO MABINI", "JOSE RIZAL"],
+                answer: 1
+            },
+            {
+                question: "WHICH VOLCANO IS CONSIDERED THE SMALLEST VOLCANO IN THE WORLD?",
+                options: ["MAYON", "TAAL", "MOUNT PINATUBO", "MOUNT APO"],
+                answer: 1
+            },
+            {
+                question: "WHAT IS THE NATIONAL FRUIT OF THE PHILIPPINES?",
+                options: ["PAPAYA", "DURIAN", "MANGO", "BANANA"],
+                answer: 1
+            },
+            {
+                question: "WHICH FLOWER  IS CONSIDERED THE NATIONAL FLOWER OF THE PHILIPPINES?",
+                options: ["GUMAMELA", "ROSEMARY", "SUNFLOWER", "SAMPAGUITA"],
                 answer: 3
             }
         ];
