--- a/index.html
+++ b/index.html
@@ -1359,13 +1359,13 @@
         // Trivia questions - More interesting questions without categories
         const triviaQuestions = [
             {
-                question: "WHICH FILIPINO HERO WRONTE 'MI ULTIMO ADIOS' BEFORE HIS EXECUTION?",
+                    question: "WHICH FILIPINO HERO WRONTE 'MI ULTIMO ADIOS' BEFORE HIS EXECUTION?",
                 options: ["MARCELO H. DEL PILAR", "GRACIANO LOPEZ JAENA", "JOSE RIZAL", "ANTONIO LUNA"],
                 answer: 2
             },
             {
                 question: "WHICH ANCIENT SCRIPT WAS USED BY PRE-COLONIAL FILIPINOS",
-                options: ["SANSKRIT", "BAYBAYIN", "LIBRO", "SARIMANOK"
+                options: ["SANSKRIT", "BAYBAYIN", "LIBRO", "SARIMANOK"]
                 answer: 3
             },
             {
