--- a/index.html
+++ b/index.html
@@ -1365,7 +1365,7 @@
             },
             {
                 question: "WHICH ANCIENT SCRIPT WAS USED BY PRE-COLONIAL FILIPINOS",
-                options: ["SANSKRIT", "BAYBAYIN", "LIBRO", "SARIMANOK"]
+                options: ["SANSKRIT", "BAYBAYIN", "LIBRO", "SARIMANOK"],
                 answer: 3
             },
             {
